--- a/templates/pgbouncer.ini.j2
+++ b/templates/pgbouncer.ini.j2
@@ -10,8 +10,8 @@
 ;;;
 ;;; Administrative settings
 ;;;
-logfile = /var/log/postgresql/pgbouncer.log
-pidfile = /var/run/postgresql/pgbouncer.pid
+logfile = /var/log/postgresql/{{pgbouncer_name}}.log
+pidfile = /var/run/postgresql/{{pgbouncer_name}}.pid
 
 ;;;
 ;;; Where to wait for clients
@@ -29,7 +29,7 @@ unix_socket_dir = /var/run/postgresql
 ;;;
 {# auth_type can be: any/trust/md5/hba/cert #}
 auth_type = {{ pgbouncer_auth_type | default('trust') }}
-auth_file = /etc/pgbouncer/userlist.txt
+auth_file = /etc/{{pgbouncer_name}}/userlist.txt
 
 ;; Query to use to fetch password from database.  Result
 ;; must have 2 columns - username and password hash.
